lib/src/compiler/tests/testdata/errors/71.out
error: syntax error
 --> line:1:13
  |
1 | rule test : rule { condition: true }
  |             ^ expected identifier
  |